--- a/CustTrack/Web.config
+++ b/CustTrack/Web.config
@@ -85,7 +85,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="SalesManContextEntities" connectionString="metadata=res://*/Models.EntityFramework.CustTrack.csdl|res://*/Models.EntityFramework.CustTrack.ssdl|res://*/Models.EntityFramework.CustTrack.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDb;initial catalog=SalesManContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+<connectionStrings><add name="SalesManContextEntities" connectionString="metadata=res://*/Models.EntityFramework.CustTrack.csdl|res://*/Models.EntityFramework.CustTrack.ssdl|res://*/Models.EntityFramework.CustTrack.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDb;initial catalog=SalesManContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
