--- a/CustTrack/CustTrack.csproj
+++ b/CustTrack/CustTrack.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Models\UpdateDepartmentModel.cs" />
     <Compile Include="Models\UpdateEmployeeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\_RoleProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
