--- a/CustTrack/Web.config
+++ b/CustTrack/Web.config
@@ -23,6 +23,11 @@
     <authentication mode="Forms">
       <forms loginUrl="/Login"></forms>
     </authentication>
+    <roleManager enabled="true" defaultProvider="testRoleProvider">
+      <providers>
+        <add name="testRoleProvider" type="CustTrack.Security._RoleProvider" />
+      </providers>
+    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
